{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 30,
  "lineage": "32158326-4074-a882-ba77-98e4ff888e00",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cdc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030584239866:vpc/vpc-03e52b21e37d49eef",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f56cb612858dcd09",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-021ef6d277775201a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "bowo-vpc"
                ]
              }
            ],
            "id": "vpc-03e52b21e37d49eef",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f381ae830d86bf99",
            "owner_id": "030584239866",
            "tags": {
              "Name": "bowo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:030584239866:security-group/sg-098c5ae775d1533ab",
            "description": "Security group for PostgreSQL publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098c5ae775d1533ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "public access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "eks cluster access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-security-group-20230718132520012800000005",
            "name_prefix": "postgres-security-group-",
            "owner_id": "030584239866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres-security-group"
            },
            "tags_all": {
              "Name": "postgres-security-group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03e52b21e37d49eef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all access",
            "from_port": 0,
            "id": "sgrule-3309287325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-098c5ae775d1533ab",
            "security_group_rule_id": "sgr-017095d59f801dcdd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc",
            "module.security_groups.aws_security_group.this",
            "module.security_groups.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "eks cluster access",
            "from_port": 5432,
            "id": "sgrule-65980169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098c5ae775d1533ab",
            "security_group_rule_id": "sgr-07674c70018fdc334",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc",
            "module.security_groups.aws_security_group.this",
            "module.security_groups.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "public access",
            "from_port": 5432,
            "id": "sgrule-1699821067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098c5ae775d1533ab",
            "security_group_rule_id": "sgr-00e1a8fd4940c9da6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cdc_vpc",
            "module.security_groups.aws_security_group.this",
            "module.security_groups.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}